--- a/package.json
+++ b/package.json
@@ -5,34 +5,27 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333 --open",
-    "lint": "eslint .",
-    "typecheck": "vue-tsc --noEmit",
-    "preview": "vite preview",
-    "test": "vitest",
-    "up": "taze major -I",
-    "postinstall": "npx simple-git-hooks"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/resource-timeline": "^6.1.10",
+    "@fullcalendar/vue3": "^6.1.10",
     "@vueuse/core": "^10.6.1",
+    "dayjs": "^1.11.10",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "zh-cn": "link:@fullcalendar/core/locales/zh-cn"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.0.0",
     "@iconify-json/carbon": "^1.1.21",
     "@types/node": "^20.9.2",
-    "@unocss/eslint-config": "^0.57.6",
-    "@unocss/eslint-plugin": "^0.57.6",
     "@unocss/reset": "^0.57.6",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue-macros/volar": "^0.17.3",
     "@vue/test-utils": "^2.4.2",
-    "eslint": "^8.54.0",
     "jsdom": "^22.1.0",
-    "lint-staged": "^15.1.0",
     "pnpm": "^8.10.5",
-    "simple-git-hooks": "^2.9.0",
-    "taze": "^0.12.0",
     "typescript": "^5.3.2",
     "unocss": "^0.57.6",
     "unplugin-auto-import": "^0.16.7",
@@ -40,13 +33,6 @@
     "unplugin-vue-macros": "^2.7.0",
     "unplugin-vue-router": "^0.7.0",
     "vite": "^5.0.0",
-    "vitest": "^0.34.6",
     "vue-tsc": "^1.8.22"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   }
 }
